default sql instance, and can run.

--- a/source/Web/Web.config
+++ b/source/Web/Web.config
@@ -12,7 +12,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="PetShop" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=PetShop;Integrated Security=True"/>
+    <add name="PetShop" connectionString="Data Source=.;Initial Catalog=PetShop;Integrated Security=True"/>
   </connectionStrings>
   <system.web>
     <authentication mode="Forms">
