Can access Azure db

--- a/source/Web/Web.Debug.config
+++ b/source/Web/Web.Debug.config
@@ -10,7 +10,7 @@
     
     <connectionStrings>
       <add name="MyDB" 
-        connectionString="Data Source=.leaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
+        connectionString="Data Source=qg7gk7dsjn.database.chinacloudapi.cnleaseSQLServer;Initial Catalog=MyReleaseDB;uid=LeiYang;pwd=L38YangSQL" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
