--- a/source/Web/Web.config
+++ b/source/Web/Web.config
@@ -12,7 +12,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="PetShop" connectionString="Data Source=.;Initial Catalog=PetShop;Integrated Security=True"/>
+    <add name="PetShop" connectionString="Data Source=qg7gk7dsjn.database.chinacloudapi.cn;Initial Catalog=PetShop;uid=LeiYang;pwd=L38YangSQL"/>
   </connectionStrings>
   <system.web>
     <authentication mode="Forms">
